--- a/index.html
+++ b/index.html
@@ -65,13 +65,9 @@
 
     <section id="contato">
         <div class="container">
-            <p>Para saber mais sobre o impacto do Hip Hop nas mídias, entre em contato:</p>
-            <form>
-
-            </form>
+            <p>Para saber mais sobre o impacto do Hip Hop nas mídias, veja nosso site: <a>https://gregoriogregorioso.github.io/sites/</a></p>
         </div>
     </section>
-
     <footer>
         <div class="container">
             <p>&copy; 2024 Apresentação de Hip Hop e as Mídias</p>
