--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <div class="container">
             <h2>Sobre o Hip Hop</h2>
             <p>O hip hop, desde seu surgimento nas ruas do Bronx, Nova York, nos anos 1970, evoluiu de um movimento cultural marginalizado para um dos maiores fenômenos culturais globais. Como movimento, ele engloba não apenas a música, mas também a dança, o grafite e o estilo de vida. Contudo, um dos pilares mais marcantes do hip hop é a música, especialmente o rap. Nesse contexto, a mídia e as redes sociais têm desempenhado um papel crucial na evolução, expansão e divulgação desse gênero musical..</p>
-            <img src="imagens/hiphop_origem.jpg" alt="Origem do Hip Hop">
         </div>
     </section>
 
@@ -44,7 +43,7 @@
     <section id="midias">
         <div class="container">
             <h2>Hip Hop nas Mídias</h2>
-            <p>Hoje, o Hip Hop está presente em diversas mídias, incluindo televisão, rádio, redes sociais e plataformas de streaming. É uma forma de expressão global e um veículo de mudança social.</p>
+            <p>Hoje, o Hip Hop está presente em diversas mídias, incluindo televisão, rádio, redes sociais<br> e plataformas de streaming. É uma forma de expressão global e um veículo de mudança social.</p>
         </div>
     </section>
 
