--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section id="contato">
         <div class="container">
-            <p>Para saber mais sobre o impacto do Hip Hop nas mídias, veja nosso site: <a>https://gregoriogregorioso.github.io/sites/</a></p>
+            <p>Para saber mais sobre o impacto do Hip Hop nas mídias, veja nosso site: <a href="https://gregoriogregorioso.github.io/sites/">https://gregoriogregorioso.github.io/</a></p>
         </div>
     </section>
     <footer>
