--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hip Hop e as Mídias</title>
+    <title>Hip Hop e as Mídias<br> 2ºC Gregório, Thiago S. Heloisa C. Moises, Matheus S.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
