--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
             <h2>Os 4 Elementos do Hip Hop</h2>
             <ul>
                 <li>MCing (Rima)</li>
-                <p>teste</p>
+                <p>MCing, ou "mestre de cerimônias", é a arte de fazer rap. Os MCs são os poetas urbanos do Hip Hop, contando histórias sobre a vida nas ruas, questões sociais e políticas, e celebrando a cultura de rua.</p>
                 <br>
                 <li>DJing (Música)</li>
+                <p>
+O termo DJing refere-se à arte de discotecar, ou seja, de selecionar e mixar músicas em eventos, festas, clubes, rádios e outros locais.</p>
                 <br>
                 <li>Breaking (Dança)</li>
+                <p>O que é Breaking? Das ruas de Nova York ao maior palco dos esportes: o break (também conhecido como breakdancing) é um estilo de dança urbana que se originou no bairro do Bronx, em Nova York, na década de 1970. É uma forma de esporte de dança que combina dança urbana com um atletismo notável.</p>
                 <br>
                 <li>Graffiti (Arte de Rua)</li>
+                <p>
+Grafite: origem, características e artistas - Brasil Escola
+O grafite é uma expressão artística realizada em espaços públicos. Essa arte surgiu da realidade da periferia urbana e evidencia críticas sociais.</p>
                 <br>
             </ul>
         </div>
