--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="sobre">
         <div class="container">
             <h2>Sobre o Hip Hop</h2>
-            <p>O hip hop, desde seu surgimento nas ruas do Bronx, Nova York, nos anos 1970, evoluiu de um movimento cultural marginalizado para um dos maiores fenômenos culturais globais. Como movimento, ele engloba não apenas a música, mas também a dança, o grafite e o estilo de vida. Contudo, um dos pilares mais marcantes do hip hop é a música, especialmente o rap. Nesse contexto, a mídia e as redes sociais têm desempenhado um papel crucial na evolução, expansão e divulgação desse gênero musical..</p>
+            <p>O hip hop, desde seu surgimento nas ruas do Bronx, Nova York, nos anos 1970, evoluiu de um movimento cultural marginalizado para um dos maiores fenômenos culturais globais. Como movimento, ele engloba não apenas a música, mas também a dança, o grafite e o estilo de vida. Contudo, um dos pilares mais marcantes do hip hop é a música, especialmente o rap. Nesse contexto, a mídia e as redes sociais têm desempenhado um papel crucial na evolução, expansão e divulgação desse gênero musical.</p>
         </div>
     </section>
 
@@ -36,16 +36,13 @@
                 <p>MCing, ou "mestre de cerimônias", é a arte de fazer rap. Os MCs são os poetas urbanos do Hip Hop, contando histórias sobre a vida nas ruas, questões sociais e políticas, e celebrando a cultura de rua.</p>
                 <br>
                 <li>DJing (Música)</li>
-                <p>
-O termo DJing refere-se à arte de discotecar, ou seja, de selecionar e mixar músicas em eventos, festas, clubes, rádios e outros locais.</p>
+                <p>O termo DJing refere-se à arte de discotecar, ou seja, de selecionar e mixar músicas em eventos, festas, clubes, rádios e outros locais.</p>
                 <br>
                 <li>Breaking (Dança)</li>
                 <p>O que é Breaking? Das ruas de Nova York ao maior palco dos esportes: o break (também conhecido como breakdancing) é um estilo de dança urbana que se originou no bairro do Bronx, em Nova York, na década de 1970. É uma forma de esporte de dança que combina dança urbana com um atletismo notável.</p>
                 <br>
                 <li>Graffiti (Arte de Rua)</li>
-                <p>
-Grafite: origem, características e artistas - Brasil Escola
-O grafite é uma expressão artística realizada em espaços públicos. Essa arte surgiu da realidade da periferia urbana e evidencia críticas sociais.</p>
+                <p>Grafite: origem, características e artistas - Brasil Escola. O grafite é uma expressão artística realizada em espaços públicos. Essa arte surgiu da realidade da periferia urbana e evidencia críticas sociais.</p>
                 <br>
             </ul>
         </div>
@@ -67,5 +64,14 @@ O grafite é uma expressão artística realizada em espaços públicos. Essa art
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEh1yVQGHzK4ZfLqlf4y9YEXLh0Ku4KzYkyxo95iRlFbgVr26dp4cWL5n00-S1tnQe58SQbW2zmA3dRe-Lb1-VY91d0YmWTVg4WqE2GljBCfnyhPnG91uLvGhX3Q2VYwZKGM6aVwJ6tQ6brMLOTXN7nHJQAmmQAAMgHlujK3ll7a24iT8IoqxPfH4HNkIQ=w1200-h630-p-k-no-nu" alt="Breaking">
                 <img src="https://static.vecteezy.com/ti/vetor-gratis/p1/149785-hip-hop-graffiti-texto-vector-vetor.jpg">
             </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Hip Hop e as Mídias. Todos os direitos reservados.</p>
+            <p>Desenvolvido por Gregório, Thiago S., Heloisa C., Moises, Matheus S.</p>
+        </div>
+    </footer>
 </body>
 </html>
