--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2024 Hip Hop e as Mídias. Todos os direitos reservados.</p>
-            <p>Desenvolvido por Gregório, Thiago S., Heloisa C., Moises, Matheus S.</p>
+            <p>Desenvolvido por Gregório D., Thiago S., Heloisa C., Moises R., Matheus S.</p>
         </div>
     </footer>
 </body>
