--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             </div>
         </div>
     </section>
+        <section id="midias">
+        <div class="container">
+            <h2>Hip Hop nas Mídias</h2>
+            <p>Hoje, o Hip Hop está presente em diversas mídias, incluindo televisão, rádio, redes sociais<br>e plataformas de streaming. É uma forma de expressão global e um veículo de mudança social.</p>
+        </div>
+    </section>
 
     <footer>
         <div class="container">
