--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </section>
   <section id="sobre">
         <div class="container">
-            <h2>Sobre o Hip Hop</h2>
-            <p>O hip hop, desde seu surgimento nas ruas do Bronx, Nova York, nos anos 1970, evoluiu de um movimento cultural marginalizado para um dos maiores fenômenos culturais globais. Como movimento, ele engloba não apenas a música, mas também a dança, o grafite e o estilo de vida. Contudo, um dos pilares mais marcantes do hip hop é a música, especialmente o rap. Nesse contexto, a mídia e as redes sociais têm desempenhado um papel crucial na evolução, expansão e divulgação desse gênero musical.</p>
+            <h2>Hip Hop no Brasil</h2>
+            <p>Mas a cultura hip hop chegou primeiro ao Brasil através do break dance. Antes do álbum, o hip hop brasileiro tinha seu espaço nas ruas de São Paulo, mais precisamente no metrô São Bento, em que os artistas faziam sua performance para quem passasse pela rua e estivesse disposto a contribuir.</p>
         </div>
     </section>
     <footer>
