--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </section>
-  <section id="sobre">
+  <section id="brasil">
         <div class="container">
             <h2>Hip Hop no Brasil</h2>
             <p>Mas a cultura hip hop chegou primeiro ao Brasil através do break dance. Antes do álbum, o hip hop brasileiro tinha seu espaço nas ruas de São Paulo, mais precisamente no metrô São Bento, em que os artistas faziam sua performance para quem passasse pela rua e estivesse disposto a contribuir.</p>
